--- a/package.json
+++ b/package.json
@@ -1,30 +1,52 @@
 {
-    "name": "fhirpath-lang",
-    "displayName": "Fhirpath lang",
-    "description": "Syntax highlight for fhirpath",
-    "version": "0.0.1",
-    "engines": {
-        "vscode": "^1.78.0"
-    },
-    "publisher": "beda-software",
-    "repository": {
-        "url": "https://github.com/beda-software/vscode-fhirpath"
-    },
-    "categories": [
-        "Programming Languages"
+  "name": "fhirpath-lang",
+  "displayName": "Fhirpath lang",
+  "description": "Syntax highlight for fhirpath",
+  "version": "0.1.0",
+  "engines": {
+    "vscode": "^1.78.0"
+  },
+  "publisher": "beda-software",
+  "repository": {
+    "url": "https://github.com/beda-software/vscode-fhirpath"
+  },
+  "categories": [
+    "Programming Languages"
+  ],
+  "contributes": {
+    "languages": [
+      {
+        "id": "fhirpath",
+        "aliases": [
+          "Fhirpath",
+          "fhirpath"
+        ],
+        "extensions": [
+          ".fhirpath"
+        ],
+        "configuration": "./language-configuration.json"
+      }
     ],
-    "contributes": {
-        "languages": [{
-            "id": "fhirpath",
-            "aliases": ["Fhirpath", "fhirpath"],
-            "extensions": [".fhirpath"],
-            "configuration": "./language-configuration.json"
-        }],
-        "grammars": [{
-            "language": "fhirpath",
-            "scopeName": "source.fhirpath",
-            "path": "./syntaxes/fhirpath.tmLanguage.json",
-            "injectTo": ["source.yaml"]
-        }]
-    }
+    "grammars": [
+      {
+        "language": "fhirpath",
+        "scopeName": "source.fhirpath",
+        "path": "./syntaxes/fhirpath.tmLanguage.json",
+        "injectTo": [
+          "source.fhirpath"
+        ]
+      },
+      {
+        "scopeName": "source.yaml-with-fhirpath",
+        "path": "./syntaxes/yaml-with-fhirpath.tmLanguage.json",
+        "injectTo": [
+          "source.yaml"
+        ],
+        "embeddedLanguages": {
+          "meta.embedded.block.expression": "fhirpath",
+          "meta.embedded.inline.expression": "fhirpath"
+        }
+      }
+    ]
+  }
 }
