--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "fhirpath-lang",
-  "displayName": "Fhirpath language",
+  "displayName": "Fhirpath Language",
   "description": "Syntax highlight for fhirpath (embedded into .yaml)",
-  "version": "0.1.1",
+  "icon": "images/icon.png",
+  "version": "0.1.2",
   "engines": {
     "vscode": "^1.78.0"
   },
@@ -13,6 +14,18 @@
   "categories": [
     "Programming Languages"
   ],
+  "license": "MIT",
+  "keywords": [
+    "fhirpath", "yaml"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/beda-software/vscode-fhirpath"
+  },
+  "homepage": "https://github.com/beda-software/vscode-fhirpath",
+  "bugs": {
+    "url": "https://github.com/beda-software/vscode-fhirpath/issues"
+  },
   "contributes": {
     "languages": [
       {
