--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "fhirpath-lang",
   "displayName": "Fhirpath Language",
   "description": "Syntax highlight for fhirpath (embedded into .yaml)",
+  "version": "0.1.3",
+  "publisher": "beda-software",
   "icon": "images/icon.png",
-  "version": "0.1.2",
+  "galleryBanner": {
+    "color": "#eef9ff",
+    "theme": "light"
+  },
   "engines": {
     "vscode": "^1.78.0"
   },
-  "publisher": "beda-software",
   "repository": {
     "url": "https://github.com/beda-software/vscode-fhirpath"
   },
