--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fhirpath-lang",
   "displayName": "Fhirpath Language",
   "description": "Syntax highlight for fhirpath (embedded into .yaml)",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "publisher": "beda-software",
   "icon": "images/icon.png",
   "galleryBanner": {
@@ -22,10 +22,6 @@
   "keywords": [
     "fhirpath", "yaml"
   ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/beda-software/vscode-fhirpath"
-  },
   "homepage": "https://github.com/beda-software/vscode-fhirpath",
   "bugs": {
     "url": "https://github.com/beda-software/vscode-fhirpath/issues"
@@ -35,7 +31,6 @@
       {
         "id": "fhirpath",
         "aliases": [
-          "Fhirpath",
           "fhirpath"
         ],
         "extensions": [
@@ -58,6 +53,17 @@
         "path": "./syntaxes/yaml-with-fhirpath.tmLanguage.json",
         "injectTo": [
           "source.yaml"
+        ],
+        "embeddedLanguages": {
+          "meta.embedded.block.expression": "fhirpath",
+          "meta.embedded.inline.expression": "fhirpath"
+        }
+      },
+      {
+        "scopeName": "source.fsh-with-fhirpath",
+        "path": "./syntaxes/fsh-with-fhirpath.tmLanguage.json",
+        "injectTo": [
+          "source.fsh"
         ],
         "embeddedLanguages": {
           "meta.embedded.block.expression": "fhirpath",
