--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "fhirpath-lang",
   "displayName": "Fhirpath Language",
-  "description": "Syntax highlight for fhirpath (embedded into .yaml)",
-  "version": "0.1.6",
+  "description": "Syntax highlight for fhirpath (embedded into .yaml, .fsh)",
+  "version": "0.1.7",
   "publisher": "beda-software",
   "icon": "images/icon.png",
   "galleryBanner": {
@@ -20,7 +20,7 @@
   ],
   "license": "MIT",
   "keywords": [
-    "fhirpath", "yaml"
+    "fhirpath", "yaml", "fsh", "fhir"
   ],
   "homepage": "https://github.com/beda-software/vscode-fhirpath",
   "bugs": {
